bug fix: input box width on small screen

--- a/src/components/UI/InputComponents/MultiInput.module.scss
+++ b/src/components/UI/InputComponents/MultiInput.module.scss
@@ -27,6 +27,8 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
+    flex-basis: 1;
+    box-sizing: border-box;
   }
 
   .divider {
